# Image-Term-Project

./: .gitignore
jpeglab/: .gitignore  Cargo.toml
jpeglab/src/: main.rs
jpeglab/src/jpeglab/: decode_step1.rs  decode_step2.rs  decode_step3.rs  decode_step4.rs  encode_step1.rs  encode_step2.rs  encode_step3.rs  encode_step4.rs  encode_step5.rs  encode_step6.rs  encode_step7.rs  mod.rs
morphological/: main.py
