[package]
name = "jpeglab"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "1.0.1"
bytebuffer = "2.2.0"
clap = { version = "4.5.4", features = ["derive"] }
image = "0.25.1"
lazy_static = "1.4.0"
